--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "license": "MIT",
   "dependencies": {
     "debug": "^3.1.0",
-    "koa-send": "^5.0.0"
+    "koa-send": "git+https://github.com/sfpgmr/send.git"
   },
   "scripts": {
     "lint": "eslint --fix .",
